charts/camunda-platform/test/unit/operate/golden/deployment.golden.yaml
---
# Source: camunda-platform/templates/operate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camunda-platform-test-operate
  labels:
    app: camunda-platform
    app.kubernetes.io/name: camunda-platform
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/version: "8.3.0"
    app.kubernetes.io/component: operate
  annotations:
    {}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camunda-platform
      app.kubernetes.io/name: camunda-platform
      app.kubernetes.io/instance: camunda-platform-test
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: camunda-platform
      app.kubernetes.io/component: operate
  template:
    metadata:
      labels:
        app: camunda-platform
        app.kubernetes.io/name: camunda-platform
        app.kubernetes.io/instance: camunda-platform-test
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: camunda-platform
        app.kubernetes.io/version: "8.3.0"
        app.kubernetes.io/component: operate
      annotations:
        checksum/config: d82945d7f33e76875784c98bbcd97835ff93548c1f6b12527faa5e7d33bee349
    spec:
      imagePullSecrets:
        []
      initContainers:
        []
      containers:
      - name: camunda-platform
        image: camunda/operate:8.3.0
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: true
          runAsUser: 1004
        env:
          - name: SPRING_PROFILES_ACTIVE
            value: "identity-auth"
          - name: SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUERURI
            value: "http://camunda-platform-test-keycloak:80/auth/realms/camunda-platform"
          - name: SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWKSETURI
            value: "http://camunda-platform-test-keycloak:80/auth/realms/camunda-platform/protocol/openid-connect/certs"
          - name: CAMUNDA_OPERATE_IDENTITY_ISSUER_URL
            value: "http://localhost:18080/auth/realms/camunda-platform"
          - name: CAMUNDA_OPERATE_IDENTITY_ISSUER_BACKEND_URL
            value: "http://camunda-platform-test-keycloak:80/auth/realms/camunda-platform"
          - name: CAMUNDA_OPERATE_IDENTITY_CLIENT_ID
            value: "operate"
          - name: CAMUNDA_OPERATE_IDENTITY_CLIENT_SECRET
            valueFrom:
              secretKeyRef:
                name: "camunda-platform-test-operate-identity-secret"
                key: operate-secret
          - name: CAMUNDA_OPERATE_IDENTITY_AUDIENCE
            value: "operate-api"
          - name: CAMUNDA_OPERATE_IDENTITY_REDIRECT_ROOT_URL
            value: "http://localhost:8081"
          - name: ZEEBE_CLIENT_ID
            value: zeebe
          - name: ZEEBE_CLIENT_SECRET
            valueFrom:
              secretKeyRef:
                name: "camunda-platform-test-zeebe-identity-secret"
                key: zeebe-secret
          - name: ZEEBE_AUTHORIZATION_SERVER_URL
            value: "http://camunda-platform-test-keycloak:80/auth/realms/camunda-platform/protocol/openid-connect/token"
          - name: ZEEBE_TOKEN_AUDIENCE
            value: zeebe-api
          - name: ZEEBE_CLIENT_CONFIG_PATH
            value: /tmp/zeebe_auth_cache
        resources:
          limits:
            cpu: 2000m
            memory: 2Gi
          requests:
            cpu: 600m
            memory: 400Mi
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            scheme: HTTP
            port: http
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 5
          timeoutSeconds: 1
        volumeMounts:
        - name: config
          mountPath: /usr/local/operate/config/application.yml
          subPath: application.yml
        - name: tmp
          mountPath: /tmp
        - name: camunda
          mountPath: /camunda
      volumes:
      - name: config
        configMap:
          name: camunda-platform-test-operate
          defaultMode: 484
      - name: tmp
        emptyDir: {}
      - name: camunda
        emptyDir: {}
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
